Revision history for Perl module REST::Neo4p
0.2250 2014-05-10
    - refactored Agent to support multiple backend user agent pkgs
      (thanks DBI guys)
    - added raw_response() to Agent to return the last HTTP::Response
    - corrected decoded_response() to decoded_content() in Agent pod

0.2241 2014-02-17
    - added exception handling for empty json query response bodies
    - fixed json row parser for transaction json return format

0.2240 2014-02-13
    - added Schema.pm which provides access to new Neo4j index creation 
      and uniqueness constraints (v2.0.1 server and greater) (thanks Andrii)
    - fixed an object destruction bug that was causing segfaults in certain
      circumstances (thanks Alexey)

0.2233 2014-01-02
    - adjusted breaking test

0.2232 2013-12-31
    - added 'code' to auto fields of REST::Neo4p::LocalException
      (thanks Andrii)

0.2231 2013-12-31
    - added env vars to build script to allow non-interactive builds
      (see Build.PL - thanks Gavin)
    - fixed guard code that prevented legitimate 0 value in index 
      creation (thanks Kevin)

0.2230 2013-12-26
    - fixed UTF-8 encoding issue (thanks Andrii)
    - documented remove_property method in Node and Relationship

0.2222 2013-12-03
    - describe class methods _tx_results() and _tx_errors()

0.2221 2013-12-01
    - pod fixes

0.2220 2013-11-29
    - added as_simple methods to entities
    - modified REST::Neo4p::Query to return simplified row structures
      in transaction mode (to handle the limited content returned by 
      Neo4j (as of 2.0.0-RC1) in this mode
    - when a row contains multiple elements, at least one of which is
      an array, fetch will return the array(s) as array refs. Rows with
      containing a single array are still flattened (the array itself 
      is returned)

0.2201 2013-11-21
    - Added get_all_labels as advertised

0.2200 2013-11-21
    - perl v5.10 required
    - Added initial support for transactions under neo4j server v2.0.0